--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "iconoir-react": "^7.7.0",
     "next": "14.2.4",
     "react": "^18",
