--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "framer-motion": "^11.3.21",
     "iconoir-react": "^7.7.0",
     "next": "14.2.4",
     "react": "^18",
